--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-    - 'apps/app-one'
-  pull_request:
-    branches: [ "main" ]
-    paths:
-    - 'apps/app-one'
+    - 'apps/app-one/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
