--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Install environment
         run: |
           npm install
+      
+      - name: Install NX environment
+        run: |
           npm install -g nx
           
       - uses: mansagroup/nrwl-nx-action@v2
