--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-          
-      - name: Install environment
-        run: |
-          npm install
       
       - name: Install NX environment
         run: |
-          npm install -g nx
+          rm -rf node_modules
+          npm cache verify
+          npm install -g @nrwl/cli
+          npm install
           
       - uses: mansagroup/nrwl-nx-action@v2
         with:
