--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,14 @@ jobs:
           npm install -g @nrwl/cli
           npm install
           
-      - uses: mansagroup/nrwl-nx-action@v2
-        with:
-          targets: build
-          projects: app-one
+#       - uses: mansagroup/nrwl-nx-action@v2
+#         with:
+#           targets: build
+#           projects: app-one
+
+      - name: Build App one
+        run: |
+          npm run build app-one
       
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
