--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,3 +76,29 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          
+  deploy:
+    needs: [build]
+    name: Deploy to Contabo Server
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup SSH connection
+        uses: webfactory/ssh-agent@v0.5.1
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          script: |
+            docker pull blackwhite152/app-one:main
+            docker stop ${{env.CONTAINER}}
+            docker rm ${{env.CONTAINER}}
+            docker run -p 3000:3000 -d --name=${{env.CONTAINER}} blackwhite152/app-one:main
