--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,4 +102,6 @@ jobs:
           port: 22
           script: |
             docker pull blackwhite152/app-one:main
+            docker stop ${{env.CONTAINER}}
+            docker rm ${{env.CONTAINER}}
             docker run -p 3000:3000 -d --name=${{env.CONTAINER}} blackwhite152/app-one:main
