--- a/apps/app-one/Dockerfile
+++ b/apps/app-one/Dockerfile
@@ -3,21 +3,25 @@ FROM node:14-alpine
 # Add tool which will fix init process
 RUN apk add dumb-init
 
-# Optimise for production
-ENV NODE_ENV production
+# # Optimise for production
+# ENV NODE_ENV production
 
-# Create app directory
-WORKDIR /usr/src/app
+# # Create app directory
+# WORKDIR /usr/src/app
 
-# Copy app files
-COPY --chown=node:node ./dist/apps/app-one /usr/src/app
+# # Copy app files
+# COPY --chown=node:node ./dist/apps/app-one /usr/src/app
 
-# Install only production dependencies
-# RUN npm ci --only=production
-RUN npm install
+# # Install only production dependencies
+# # RUN npm ci --only=production
+# RUN npm install
 
-# friends don’t let friends run containers as root!
+# # friends don’t let friends run containers as root!
 USER node
+
+WORKDIR /app
+COPY ./dist/apps/app-one .
+RUN npm install --production
 
 # Make port 8080 accessible outside of container
 EXPOSE 3000
