change docker file app-one

--- a/apps/app-one/Dockerfile
+++ b/apps/app-one/Dockerfile
@@ -1,33 +1,34 @@
 FROM node:14-alpine
 
 # Add tool which will fix init process
-# RUN apk add dumb-init
+RUN apk add dumb-init
 
 # # Optimise for production
-# ENV NODE_ENV production
+ENV NODE_ENV production
 
 # # Create app directory
-# WORKDIR /usr/src/app
+WORKDIR /app
+COPY ./package.json .
 
 # # Copy app files
-# COPY --chown=node:node ./dist/apps/app-one /usr/src/app
+COPY --chown=node:node ./dist/apps/app-one .
 
 # # Install only production dependencies
-# # RUN npm ci --only=production
+RUN npm ci --only=production
 # RUN npm install
 
 # # friends don’t let friends run containers as root!
 # USER node
 
-WORKDIR /app
+# WORKDIR /app
 
-COPY ./package.json .
+# COPY ./package.json .
 
-RUN npm install --production
+# RUN npm install --production
 
-COPY ./dist/apps/app-one .
+# COPY ./dist/apps/app-one .
 
 # Make port 8080 accessible outside of container
-EXPOSE 3333
+EXPOSE 3000
 # CMD ["dumb-init", "node", "main.js" ]
 CMD node ./main.js
