--- a/apps/app-two/Dockerfile
+++ b/apps/app-two/Dockerfile
@@ -1,28 +1,25 @@
 FROM node:14-alpine
 
 # Add tool which will fix init process
-# RUN apk add dumb-init
+RUN apk add dumb-init
 
 # # Optimise for production
-# ENV NODE_ENV production
+ENV NODE_ENV production
 
-# # Create app directory
-# WORKDIR /usr/src/app
-
-# # Copy app files
-# COPY --chown=node:node ./dist/apps/app-two /usr/src/app
-
-# # Install only production dependencies
-# # RUN npm ci --only=production
-# RUN npm install
-
-# # friends don’t let friends run containers as root!
+# Create app directory
 USER node
 
 WORKDIR /app
-COPY ./dist/apps/app-two .
+COPY ./package.json .
+
+# # Copy app files
+COPY --chown=node:node ./dist/apps/app-two .
+
+# # Install only production dependencies
+# RUN npm ci --only=production
 RUN npm install --production
 
 # Make port 8080 accessible outside of container
-EXPOSE 3001
-CMD ["dumb-init", "node", "main.js" ]
+EXPOSE 3000
+# CMD ["dumb-init", "node", "main.js" ]
+CMD node ./main.js
