--- a/.github/workflows/main-app-two.yml
+++ b/.github/workflows/main-app-two.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build App one
         run: |
           npm install express --save
-          npm run build app-one
+          npm run build app-two
       
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -77,7 +77,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          file: 'apps/app-one/Dockerfile'
+          file: 'apps/app-two/Dockerfile'
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
